syntax = "proto3";

package kafka;

service KafkaService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  string message = 1;
}

message SendMessageResponse {
  bool success = 1;
}
